<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/navbar_header"
            android:layout_width="59dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:text="@string/yelp"
            android:textColor="@color/white"
            android:textSize="25sp"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="16dp" />

        <ImageView
            android:id="@+id/tv_header_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/bookings_icon"
            android:src="@drawable/reservation" />

    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/homescreen_business"
        android:layout_width="281dp"
        android:layout_height="42dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/business_search"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <AutoCompleteTextView
        android:id="@+id/autoComplete_keyword"
        android:layout_width="212dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="84dp"
        android:completionThreshold="0"
        android:hint="@string/keyword"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/input_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="140dp"
        android:ems="10"
        android:hint="@string/distance"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="200dp"
        android:textStyle="bold"
        android:text="@string/category"
        android:textColor="@color/purple_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Spinner
        android:id="@+id/categories_dropdown"
        android:layout_width="171dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="228dp"
        android:contentDescription="@string/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="222dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="340dp"
        android:buttonTint="@color/purple_200"
        android:textColor="@color/black"
        android:onClick="onCheckboxClicked"
        android:text="Auto-detect my location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/inputLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="284dp"
        android:ems="10"
        android:hint="@string/location"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="404dp"
        android:text="SUBMIT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="208dp"
        android:layout_marginTop="404dp"
        android:text="CLEAR"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="183dp"
        android:layout_height="43dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="460dp"
        android:text="Results"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="360dp"
        android:layout_height="154dp"
        android:layout_marginTop="532dp"
        android:background="@android:color/white"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/nobusiness"
        android:layout_width="237dp"
        android:layout_height="26dp"
        android:layout_marginTop="504dp"
        android:text=""
        android:textColor="@color/red"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />


</androidx.constraintlayout.widget.ConstraintLayout>

